--- a/app/static/templates/base.html
+++ b/app/static/templates/base.html
@@ -12,13 +12,13 @@
     <meta property="og:description" content="Смотрите видео с YouTube по ссылке.">
     <meta property="og:url" content="https://youtubick.ru">
     <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "WebSite",
-        "name": "YouTubick",
-        "url": "https://youtubick.ru",
-        "description": "Сервис для просмотра видео с YouTube"
-    }
+        {
+            "@context": "https://schema.org",
+            "@type": "WebSite",
+            "name": "YouTubick",
+            "url": "https://youtubick.ru",
+            "description": "Сервис для просмотра видео с YouTube"
+        }
     </script>
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -26,7 +26,7 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="icon" href="{{ url_for('static', path='favicon.ico') }}">
+    <link rel="icon" href="/static/favicon.ico">
 </head>
 
 <body>
@@ -75,7 +75,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous">
 </script>
-<script src="{{ url_for('static', path='js/scheme_button.js') }}"></script>
+<script src="/static/js/scheme_button.js"></script>
 {% block scripts %}
 {% endblock %}
 </body>
