--- a/app/static/templates/help_support.html
+++ b/app/static/templates/help_support.html
@@ -30,7 +30,7 @@
 </main>
 
 {% block scripts %}
-<script src="{{ url_for('static', path='js/copy.js') }}"></script>
+<script src="/static/js/copy.js"></script>
 {% endblock %}
 
 {% endblock %}
