--- a/app/static/templates/index.html
+++ b/app/static/templates/index.html
@@ -54,7 +54,7 @@
     </div>
 </main>
 {% block scripts %}
-<script src="{{ url_for('static', path='js/main.js') }}"></script>
+<script src="/static/js/main.js"></script>
 {% endblock %}
 
 {% endblock %}
